--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./distribution.html">
                                     Дистрибьюция
                                 </a>
                             </li>
@@ -841,62 +841,6 @@
             </div>
         </section>
 
-
-        <section class="fp-section distribution light" id="distribution" >
-            <div class="fp-bg"></div>
-            <div class="container_section">
-<!--                <div class="img_section">-->
-<!--                    <img src="./img/removebg.png" alt="">-->
-<!--                </div>-->
-                <div class="breadcrumbs">
-                    <a href="#">
-                        Главная
-                    </a>
-                    <a href="#">
-                        Дистрибьюция
-                    </a>
-                </div>
-                <h2 class="title_section">
-                    Дистрибьюция
-                </h2>
-
-                <div class="tabs">
-                    <a href="#" class="active">
-                        mimosa
-                    </a>
-                    <a href="#">
-                        rubetek
-                    </a>
-                </div>
-
-                <div class="txt">
-                    <p>
-                        ТОО “Signal Telecom” – является официальным дистрибьютором оборудования американской компании Mimosa by Airspan  на территории Казахстана и Центральной Азии.
-                    </p>
-
-                    <p>
-                        Радиотехнологии компании Mimosa by Airspan – это широкополосная беспроводная сетевая связь со скоростью оптоволокна.
-                    </p>
-                </div>
-
-            </div>
-            <div class="container_copy">
-                <a href="#" class="phone">
-                    <img src="./img/phone_icon.svg" alt="">
-                    +7 (727) 357 33 33
-                </a>
-                <div class="toggle_next">
-                    <a href="#" class="toggle_btn_next">
-                        <img src="./img/scroll_icon_default.svg" alt="">
-                        Прокрутите для продолжения
-                    </a>
-                </div>
-                <div class="copy">
-                    © 2020. ТОО “Signal Telecom”
-                </div>
-            </div>
-        </section>
-
         <section class="fp-section contact" id="contact">
             <div class="container_section">
                 <div class="top_wrapper">
@@ -1195,6 +1139,7 @@
 <script src="./js/scrolloverflow.min.js"></script>
 <script src="./js/fullpage.js"></script>
 <script src="./js/main.js"></script>
+<!--<script src="./js/fullpage_options.js"></script>-->
 
 </body>
 </html>
