fix toggle theme v1

--- a/src/detail_item.html
+++ b/src/detail_item.html
@@ -341,8 +341,8 @@
                         <div class="item active" data-img="./img/main_img.png">
                             <img src="./img/main_img.png" alt="">
                         </div>
-                        <div class="item " data-img="./img/main_img.png">
-                            <img src="./img/main_img.png" alt="">
+                        <div class="item " data-img="./img/second_img.png">
+                            <img src="./img/second_img.png" alt="" style="background: #fff">
                         </div>
                         <div class="item" data-img="./img/main_img.png">
                             <img src="./img/main_img.png" alt="">
