--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,7 @@
         </section >
 
 
-        <section class="fp-section  info light" id="info" data-bg='F4F3F6'>
+        <section class="fp-section  info light" id="info" data-bg='linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.9) 76.04%, rgba(255, 255, 255, 0) 100%);'>
             <div class="container_section">
                 <div class="wrapper_top_section">
                     <h2 class="title_section">
